fix pagination item color in dark mode

--- a/src/mp-search/mp-search.styl
+++ b/src/mp-search/mp-search.styl
@@ -98,3 +98,7 @@ mp-button
   #search-section
     display block
 
+@media (prefers-color-scheme: dark) 
+  .pagination-item 
+    color var(--mp-color-dark--50)
+
